z-PENTESTING/red-packet/04_artifacts/cloud/aws_saopaulo_network_acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-060b008394056f691",
                    "NetworkAclId": "acl-0f579b21f2002282f",
                    "SubnetId": "subnet-0ab577186fe90fc0a"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0313d62a27b4a94f1",
                    "NetworkAclId": "acl-0f579b21f2002282f",
                    "SubnetId": "subnet-01c1ebe4ff61733c6"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0ed1b4ad3387a36e5",
                    "NetworkAclId": "acl-0f579b21f2002282f",
                    "SubnetId": "subnet-0c6fa2ce2e9d69eb1"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-013310593b0967a41",
                    "NetworkAclId": "acl-0f579b21f2002282f",
                    "SubnetId": "subnet-04d8c2e7f2c8e34a1"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0f579b21f2002282f",
            "Tags": [],
            "VpcId": "vpc-0c415a6b4d2f2c328",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0c892d403102c9aee",
                    "NetworkAclId": "acl-015e23bee8da30c2b",
                    "SubnetId": "subnet-01fb4d04322aa0eaa"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0c4a6b9e674c09e47",
                    "NetworkAclId": "acl-015e23bee8da30c2b",
                    "SubnetId": "subnet-06f999967c8847fbd"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0d26bbd3f441dc550",
                    "NetworkAclId": "acl-015e23bee8da30c2b",
                    "SubnetId": "subnet-053d7ec71e22fb05a"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-015e23bee8da30c2b",
            "Tags": [],
            "VpcId": "vpc-0bea9cbbaeba52185",
            "OwnerId": "814910273374"
        }
    ]
}
