z-PENTESTING/red-packet/04_artifacts/cloud/aws_tokyo_network_acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0e44b1bdd1bbc0ed9",
                    "NetworkAclId": "acl-00803c7645c72fc02",
                    "SubnetId": "subnet-00e32ae05c90e1c1b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0576c482bc12ef697",
                    "NetworkAclId": "acl-00803c7645c72fc02",
                    "SubnetId": "subnet-02b93d48283ff7163"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0e8fdfebf70e1809d",
                    "NetworkAclId": "acl-00803c7645c72fc02",
                    "SubnetId": "subnet-02226bc0b7a1673a9"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-00803c7645c72fc02",
            "Tags": [],
            "VpcId": "vpc-0f1fb8dfae4c22563",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0cb03618eba8f1669",
                    "NetworkAclId": "acl-049927da077fb7a05",
                    "SubnetId": "subnet-087b9f3f63cbac4fe"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-037422b3ce2f679dc",
                    "NetworkAclId": "acl-049927da077fb7a05",
                    "SubnetId": "subnet-0002166979c1da0ba"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0fad539bd8106e95a",
                    "NetworkAclId": "acl-049927da077fb7a05",
                    "SubnetId": "subnet-071d2dd8b0d0c29b7"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0d817d7236a20a051",
                    "NetworkAclId": "acl-049927da077fb7a05",
                    "SubnetId": "subnet-019585ada2629e80a"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-049927da077fb7a05",
            "Tags": [],
            "VpcId": "vpc-02f3862ac0cee34c5",
            "OwnerId": "814910273374"
        }
    ]
}
