z-PENTESTING/red-packet/04_artifacts/cloud/aws_tokyo_route_tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0def7564e962a8562",
                    "RouteTableId": "rtb-0aad8a7efd8caab34",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0aad8a7efd8caab34",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.100.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-02f3862ac0cee34c5",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-04c03d5bd48622143",
                    "RouteTableId": "rtb-00467d2b499e53155",
                    "SubnetId": "subnet-087b9f3f63cbac4fe",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0ddaabe5c2bb63325",
                    "RouteTableId": "rtb-00467d2b499e53155",
                    "SubnetId": "subnet-0002166979c1da0ba",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-00467d2b499e53155",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.250.1.0/24",
                    "TransitGatewayId": "tgw-04a41409dd59ee404",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.100.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.200.0.0/16",
                    "TransitGatewayId": "tgw-04a41409dd59ee404",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-61a54008",
                    "GatewayId": "vpce-041533bfd33787a6c",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Private_Route"
                }
            ],
            "VpcId": "vpc-02f3862ac0cee34c5",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-04cb791837768b1c7",
                    "RouteTableId": "rtb-0579dfac3dd04c5fb",
                    "SubnetId": "subnet-071d2dd8b0d0c29b7",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0756b80dcffc9fe90",
                    "RouteTableId": "rtb-0579dfac3dd04c5fb",
                    "SubnetId": "subnet-019585ada2629e80a",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0579dfac3dd04c5fb",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.100.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0397c6f0901739e6f",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Public_Route"
                }
            ],
            "VpcId": "vpc-02f3862ac0cee34c5",
            "OwnerId": "814910273374"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0da6d911cc4309a1d",
                    "RouteTableId": "rtb-0a97949e65ee39844",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0a97949e65ee39844",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0cba79b71ca9d202e",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0f1fb8dfae4c22563",
            "OwnerId": "814910273374"
        }
    ]
}
